# Esp_menu

./: .gitignore  .readthedocs.yaml  .readthedocs.yml  CMakeLists.txt  DISPLAY_CONFIG.md  Doxyfile  Esp_menu.c  Kconfig  Kconfig.projbuild  README.md  build_clang.fish  build_direct.fish  build_gcc.fish  clean.fish  esp-idf-terminal.fish  esp-idf-terminal.sh  flash.fish  generate_docs.sh  generate_menu.py  generate_menu_from_templates.py  generate_menu_header.py.bak  idf_component.yml  mainpage.dox  menu_template.h  monitor.fish  project.yml  sdkconfig  sdkconfig.old  set-clang-env.fish  temp.py
.github/: copilot-instructions.md
assets/: menu.json  user_actions.c  user_actions.h  user_graphic.c
assets/templates/: menu.c.j2  menu.h.j2
ceedling_build/test/dependencies/: Esp_menu.d  test_Esp_menu.d
ceedling_build/test/mocks/test_Esp_menu/: mock_esp_lcd_panel_io.c  mock_esp_lcd_panel_io.h  mock_esp_lcd_panel_ops.c  mock_esp_lcd_panel_ops.h  mock_esp_lcd_panel_vendor.c  mock_esp_lcd_panel_vendor.h  mock_gpio.c  mock_gpio.h  mock_i2c_master.c  mock_i2c_master.h
ceedling_build/test/runners/: test_Esp_menu_runner.c
components/Esp_menu/: CMakeLists.txt  Esp_menu.c  Kconfig.projbuild  generate_menu.py  generate_menu_header.py  idf_component.yml  menu.json  test_config.h  user_actions.c  user_graphic.h
components/Esp_menu/include/: Esp_menu.h
components/Esp_menu/templates/: menu.c.j2  menu.h.j2
components/esp_menu/: CMakeLists.txt  Kconfig.projbuild  idf_component.yml
components/esp_menu/assets/: menu.json  user_actions.c  user_graphic.c  user_graphic.h
components/esp_menu/assets/templates/: menu.c.j2  menu.h.j2
components/esp_menu/include/: esp_menu.h  user_actions.h
components/esp_menu/src/: esp_menu.c  user_actions.c
components/esp_menu/test/: CMakeLists.txt  README.md  test_esp_menu_init.c
docs/: .environment.yaml  .environment.yml  Makefile  conf.py  index.rst  json.rst  python.rst  requirements.txt
docs/doxygen/: Doxyfile
docs/xml/: Doxyfile.xml  dir_23556223790033a781c5965ffe6e6dc9.xml  dir_30e49091f61039451e154db78e2e4dd9.xml  dir_34e9a5f624ac092a9ae2401c28d616d7.xml  dir_409f97388efe006bc3438b95e9edef48.xml  dir_5c982d53a68cdbcd421152b4020263a9.xml  dir_68267d1309a1af8e8297ef4c3efbcdba.xml  dir_84fc5dba3506812825191c0c043e3c97.xml  dir_9ec0ad20d1e8348ec2e8113f3b6c125c.xml  dir_d44c64559bbebec7f509842c48db8b23.xml  dir_f4241d3abb8552b7f92376eebf43313d.xml  index.xml  indexpage.xml
docs/xml/d0/d29/: main_8c.xml
docs/xml/d0/d9b/: menu__data_8h.xml
docs/xml/d0/dd3/: group__code__gen.xml
docs/xml/d1/d13/: components_2Esp__menu_2generated_2menu_8c.xml
docs/xml/d1/d3e/: Esp__menu_8c.xml
docs/xml/d1/dbe/: temp_8py.xml
docs/xml/d2/d78/: esp__menu_8c.xml
docs/xml/d2/df5/: include_2Esp__menu_8h.xml
docs/xml/d3/d59/: components_2Esp__menu_2user__graphic_8h.xml
docs/xml/d4/d33/: generate__menu_8py.xml
docs/xml/d4/d34/: main_2user__menu_2user__actions_8c.xml
docs/xml/d4/d81/: user__graphic_8h.xml
docs/xml/d4/d85/: user__graphic_8c.xml
docs/xml/d5/d23/: namespacetemp.xml
docs/xml/d5/d4d/: mainpage_8dox.xml
docs/xml/d6/d5d/: group__ESP__menu.xml
docs/xml/d7/ddf/: user__actions_8h.xml
docs/xml/d8/dce/: main_2user__menu_2user__graphic_8h.xml
docs/xml/da/d0f/: generated_2menu__data_8h.xml
docs/xml/da/d13/: user__actions_8c.xml
docs/xml/da/d86/: test__config_8h.xml
docs/xml/da/d9c/: components_2Esp__menu_2user__actions_8c.xml
docs/xml/da/de1/: group__display.xml
docs/xml/db/d55/: components_2Esp__menu_2generated_2menu__data_8h.xml
docs/xml/db/dd7/: structMenuParams__t.xml
docs/xml/db/df3/: components_2Esp__menu_2include_2Esp__menu_8h.xml
docs/xml/dc/dc7/: namespacegenerate__menu.xml
docs/xml/dc/df1/: group__input.xml
docs/xml/dd/d3a/: components_2Esp__menu_2Esp__menu_8c.xml
docs/xml/dd/dfb/: esp__menu_8h.xml
docs/xml/df/dd8/: generated_2menu_8c.xml
examples/basic_menu/: CMakeLists.txt
examples/basic_menu/main/: CMakeLists.txt  main.c
include/: Esp_menu.h  esp_menu.h
main/: CMakeLists.txt  hello_world_example_main.c  idf_component.yml  main.c
main/user_menu/: user_actions.c  user_actions.h  user_graphic.h
scripts/: generate_menu_from_templates.py
src/: CMakeLists.txt  Esp_menu.c  Esp_menu.c.bak  esp_menu.c
templates/: menu.c.j2
test/: test_Esp_menu.c
test/support/: unity_config.h
test/support/stub_esp_idf/: esp_log.h  i2c_communication.h  sdkconfig.h
test/support/stub_esp_idf/driver/: gpio.h  i2c_master.h  spi_master.h
test/support/stub_esp_idf/esp_common/: esp_err.h
test/support/stub_esp_idf/esp_lcd/: esp_lcd_panel_io.h  esp_lcd_panel_ops.h  esp_lcd_panel_ssd1306.h  esp_lcd_panel_vendor.h  esp_lcd_types.h
test/support/stub_esp_idf/esp_lvgl_port/: esp_lvgl_port.h
test/support/stub_esp_idf/esp_system/: esp_system.h
test/support/stub_esp_idf/esp_timer/: esp_timer.h
test/support/stub_esp_idf/freertos/: FreeRTOS.h  task.h
test/support/unity/: unity_config.h
unity-app/: CMakeLists.txt
